ember/app/styles/styles.css
body{
  font-size: 15px;
  font-family: 'Lato', sans-serif;
}


/* LOGIN */
.login-box {
  float: left;
  display: block;
  margin-right: 2.35765%;
  width: 48.82117%;
  margin-left: 25.58941%;
  background: #ebeff1;
  padding: 1.5rem;
  text-align: center;
  margin-top: 3rem;
}

div.login-box h1{
  padding: 2rem 0;
  border-bottom: 1px solid #cecece;
}


.login-box .logo {
  width: 30%;
  display: inline-block;
}

.login-box .logo img {
  width: 100%;
}

/*form */
.row.row_element {
  margin-bottom: 14px;
  margin-top: 14px;
}

.row.row_element select {
  min-width: 100%;
}

.row.row_element input {
  min-width: 100%;
}

section.row h2{
  text-align: center;
  margin-bottom: 25px;
  margin-top: 25px;
}

#notes textarea{
  width: 100%;
}

#rf_performance td input{
  width: 100px;
}

#physical_ports section.row .row{
  margin-bottom: 15px;
  margin-top: 15px;
}

#service_fragments section.row .row{
  margin-bottom: 15px;
  margin-top: 15px;
}

#predicted_modulation{
  margin-bottom: 15px;
  margin-top: 15px;
}

#configured_modulation{
  margin-bottom: 15px;
  margin-top: 15px;
}

#addPort{
  float: right;
}

#addFragment{
  float: right;
}

#pictures .row{
  text-align: center;
}

.user-info li{
  text-align: center;
}
.main-content{
  margin-top: 110px;
  margin-bottom: 70px;
}

.navbar-nav > li > a {
  padding-top: 30px;
  padding-bottom: 30px;
}

.footerbar {
  padding: 0px;
}

.navbar-brand img{
  width: 100px;
}

@media screen and (max-width: 767px) {
  .navbar-brand img{
    width: 50px;
  }
}

